# home-automations

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
custom_components/home_automations_hass/: __init__.py  base_entity.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  manifest.json  schemas.py  sensor.py  switch.py
custom_components/home_automations_hass/translations/: en.json
home_automations/: __main__.py  common.py  const.py  containers.py  decorators.py  home_automations.py  home_automations_api.py  tools.py
home_automations/helper/: client.py  clock.py  clock_events.py  day_state.py  logger.py  math.py
home_automations/models/: api_config.py  climate_config.py  config.py  dimmer_config.py  exceptions.py  homeassistant_config.py  light_replacement_config.py  logging_config.py  motion_light_config.py  notification_config.py  sensor_notify_config.py  state_condition_config.py  status.py  thermostat_config.py  tibber_config.py  timed_light_config.py
home_automations/modules/: base_module.py  dimmer_module.py  dummy_module.py  light_replacement_module.py  motion_light.py  motion_light_module.py  sensor_notify_module.py  thermostat_module.py  tibber_module.py  timed_light_module.py
tests/: config.test.yml
